fixed body overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,8 @@ body {
 
 #headingpage {
   background-color: transparent;
-
+  position: relative;
+  float: left;
   margin-bottom: 25px;
   padding: 10px;
   position: fixed;
@@ -32,7 +33,6 @@ body {
     background-position: top;
     background-size: cover;
     height: 80vh;
-   
     margin-bottom: 5px;
     margin-top: 5px; 
     color: #fff;
@@ -242,6 +242,7 @@ h1{
     color: #fff;
     font-size: 5em;
     text-transform: uppercase;
+
 }
 h1 span{
     display: inline-block;
